chore: move angular-esbuild into apps/

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -14,4 +14,4 @@ packages:
   - 'webpack'
   - 'assemble-release-plan'
   - 'packages/runtime-plugins/*'
-  - 'packages/angular-esbuild/*'
+  - 'apps/angular-esbuild/*'
