--- a/apps/angular-esbuild/host/package.json
+++ b/apps/angular-esbuild/host/package.json
@@ -37,6 +37,9 @@
     "@angular/compiler-cli": "^21.0.0",
     "jsdom": "^27.1.0",
     "typescript": "~5.9.2",
-    "vitest": "^4.0.8"
+    "vitest": "^4.0.8",
+    "@angular-esbuild/builders": "workspace:*",
+    "@module-federation/esbuild": "workspace:*",
+    "module-federation/webpack-bundler-runtime": "workspace:*"
   }
 }
