--- a/apps/angular-esbuild/builders/package.json
+++ b/apps/angular-esbuild/builders/package.json
@@ -15,6 +15,7 @@
     "@angular-devkit/core": "^21.0.0",
     "rxjs": "~7.8.0",
     "@angular/build": "^21.0.2",
-    "@module-federation/esbuild": "workspace:*"
+    "@module-federation/esbuild": "workspace:*",
+    "@module-federation/webpack-bundler-runtime": "workspace:*"
   }
 }
