--- a/apps/angular-esbuild/builders/tsconfig.json
+++ b/apps/angular-esbuild/builders/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": "tsconfig",
-    "outDir": "./dist/out-tsc",
+    "outDir": "./dist",
     "target": "es6",
     "declaration": true,
     "module": "commonjs",
